# yaub

./: .gitignore  docker-compose.yaml  package-lock.json  package.json
backend/: Dockerfile  go.mod  go.sum  main.go  readme.md
backend/alog/: log.go  writer.go
backend/data/posts/: meta_info.json
backend/data/posts/kernel_models/: post.md
backend/data/posts/linear_models/: post.md
backend/database/mongodb/: client.go
backend/lib/comments/: comments.go
backend/lib/iam/: encrypt.go  iam.go  sign_in.go
backend/lib/mongodb/: client.go
backend/lib/myerrors/: custom_errors.go
backend/webserver/: handler.go  web.go
backend/webserver/handlers/: aim_handler.go  comments_handler.go  llmer_handler.go  posts_handler.go  sign_in_handler.go  utils.go
certbot/: Dockerfile  readme.md
frontend/simple-yaub/: README.md  package-lock.json  package.json
frontend/simple-yaub/public/posts/: meta_info.json
frontend/simple-yaub/src/app/: layout.js  layout.tsx  page.css  page.js  page.scss  page.tsx
llmer/: .gitignore  Dockerfile  Makefile  pyproject.toml  readme.md  requirements.txt
llmer/src/: run.py  run_main.py
llmer/src/browser/: errors.py  imitator.py  model_session.py
llmer/src/grpc/: chats_pb2.py  chats_pb2.pyi  chats_pb2_grpc.py
llmer/src/llmer/: run.py
llmer/src/llmer/browser/: browser_session.py  errors.py  model_session.py
llmer/src/llmer/grpc/: chats_pb2.py  chats_pb2.pyi  chats_pb2_grpc.py
llmer/src/llmer/utils/: errors.py  helpers.py
proto/: chats.proto  update.sh
reverse-proxy/: Dockerfile  default.conf  default_old.conf
(+51 files in other folders)
