[tool.poetry]
name = "llmer"
version = "0.1.0"
description = "Connector for LLMs"
authors = ["freelectron"]
packages = [{ include = "llmer", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
grpcio-tools = "^1.73.0"
selenium = "^4.33.0"
asyncio = "^3.4.3"
undetected = "^0.0.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llmer = "llmer.run:serve"